[opennap 0.26]

added `lock_memory' boolean configuration option to prevent the process from
being swapped when enabled

added `registered_only' boolean configuration variable to only allow
registered users to log in

added `auto_register' boolean configuration option to force user account
registration upon login

added support for the new file sharing commands in Napster 2.0 Beta 6

the `servers' file format was changed to add an extra field for a local
password to use instead of `server_password' to enable different password
pairs to be used for each server link

added support for server-side ignore commands in Napster 2.0 beta 6

added support for cloaking by privileged users

muzzle state is now stored in the user db and restored when the user logs in
the next time

added support for server ping client command in Napster 2.0 beta 6

added support for channel ban client commands in Napster 2.0 beta 6

added support for creating `rollover' channels when predefined channels
reach their limit on the number of users

[opennap 0.25]

added a new configuration variable `config_dir' which controls the location
where opennap looks for its config files (users, servers, bans, motd,
channels), and removed the file-specific configuration variables:
user_db_path, server_db_path and motd_path.

added persistent channel configuration file: channels.  This file allows
creation of channels which always exist even if no users are in them, along
with the default level and limit.  See sample.channels for an example.

added the OperServ `usermode' command to allow privileged users (Moderator
or higher) to selectively turn off server notifications about things such as
kills, muzzles and bans.  See the README file for details.

[opennap 0.24]

md5 passwords are now used to store user passwords on disk.  A new utility
called 'mkpass' is now used to generate a md5 password from plaintext
password when first setting up the server.  See the README file for details.
